[patch]

[profile.dev]
lto = true

[profile.release]
lto = true

[workspace]
members = [
    "apps/monolithic_userboot",

    "ulib/axcomp",

    "api/arceos_api",
    "api/axfeat",
    "api/arceos_posix_api",
    "api/linux_syscall_api",

    "crates/allocator",
    "crates/arch_boot",
    "crates/arm_pl011",
    "crates/axerrno",
    "crates/axfs_devfs",
    "crates/axfs_ramfs",
    "crates/axfs_vfs",
    "crates/axio",
    "crates/capability",
    "crates/crate_interface",
    "crates/driver_block",
    "crates/driver_common",
    "crates/driver_display",
    "crates/driver_net",
    "crates/driver_pci",
    "crates/driver_virtio",
    "crates/dw_apb_uart",
    "crates/elf_parser",
    "crates/flatten_objects",
    "crates/handler_table",
    "crates/kernel_guard",
    "crates/lazy_init",
    "crates/linked_list",
    "crates/memory_addr",
    "crates/of",
    "crates/page_table",
    "crates/page_table_entry",
    "crates/percpu",
    "crates/percpu_macros",
    "crates/ratio",
    "crates/scheduler",
    "crates/slab_allocator",
    "crates/spinlock",
    "crates/taskctx",
    "crates/timer_list",
    "crates/tuple_for_each",

    "modules/axalloc",
    "modules/axconfig",
    "modules/axdisplay",
    "modules/axdriver",
    "modules/axfs",
    "modules/axhal",
    "modules/axlog",
    "modules/axmem",
    "modules/axnet",
    "modules/axruntime",
    "modules/axsignal",
    "modules/axtask",
    "modules/axtrap",
]
resolver = "2"
